--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ python = "^3.10"
 pytest = "^7.4.0"
 ruff = "^0.1.6"
 mypy = "^1.5.0"
+pre-commit = "^4.2.0"
 
 [tool.ruff]
 # Enable Pyflakes ('F'), pycodestyle ('E'), isort ('I'), and Black-compatible auto-formatting
