--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "macwinua"
-version = "0.1.2"
+version = "0.1.3"
 description = "A library for generating realistic browser headers for macOS and Windows platforms — always the freshest Chrome headers."
 authors = ["Nuung <qlgks1@naver.com>"]
 readme = "README.md"
@@ -32,7 +32,7 @@ pytest-cov = "^6.1.1"
 # Enable Pyflakes ('F'), pycodestyle ('E'), isort ('I'), and Black-compatible auto-formatting
 line-length = 130
 target-version = "py310"
-select = ["E", "F", "I", "W", "B"]
+select = ["E", "F", "W", "B"]
 ignore = []
 
 [tool.ruff.format]
